--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "convex": "^1.16.3",
     "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^12.0.0-alpha.0",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "next-themes": "^0.3.0",
