--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@tanstack/react-query": "^5.59.0",
     "@tanstack/react-table": "^8.20.5",
+    "arima": "^0.2.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "convex": "^1.16.3",
     "convex-helpers": "^0.1.58",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^12.0.0-alpha.0",
@@ -37,6 +38,7 @@
     "next": "14.2.13",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-stars": "^2.2.5",
