--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/core": "^0.35.3",
     "@convex-dev/auth": "^0.0.71",
     "@convex-dev/react-query": "^0.0.0-alpha.5",
+    "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
