--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-stars": "^2.2.5",
     "react-use": "^17.5.1",
     "recharts": "^2.12.7",
+    "sharp": "^0.33.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
