--- a/package.json
+++ b/package.json
@@ -46,10 +46,12 @@
     "react-stars": "^2.2.5",
     "react-use": "^17.5.1",
     "recharts": "^2.12.7",
+    "resend": "^4.0.1-alpha.0",
     "sharp": "^0.33.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
