--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@convex-dev/auth": "^0.0.71",
     "@convex-dev/react-query": "^0.0.0-alpha.5",
     "@headlessui/react": "^2.1.10",
+    "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -42,6 +43,7 @@
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-stars": "^2.2.5",
     "react-use": "^17.5.1",
