--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "use-sound": "^4.0.3",
     "zod": "^3.23.8",
     "zustand": "^5.0.0-rc.2"
   },
